[package]
name = "rustytrader"
version = "0.1.0"
authors = ["Darius Seroka <dariusjs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
#yew = "0.17"